# kinect-v2-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
include/: sdk_wrapper.h
kinect-v2/: Cargo.toml
kinect-v2-sys/: Cargo.toml  build.rs
kinect-v2-sys/include/: wrapper.h
kinect-v2-sys/src/: audio.rs  bindings.rs  body.rs  body_index.rs  color.rs  coordinate.rs  depth.rs  infrared.rs  kinect.rs  lib.rs  long_exposure_infrared.rs  multi_source_frame.rs
kinect-v2/src/: audio_capture.rs  body_capture.rs  body_index_capture.rs  color_capture.rs  depth_capture.rs  infrared_capture.rs  lib.rs  multi_source_capture.rs
src/: audio.rs  bindings.rs  body.rs  body_index.rs  color.rs  color_frame.rs  coordinate.rs  depth.rs  frame.rs  infrared.rs  kinect.rs  kinect_sensor.rs  lib.rs  long_exposure_infrared.rs  main.rs  multi_source_frame.rs
