[workspace]
resolver = "3"
members = [ "kinect-v2", 
    "kinect-v2-sys"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
log = "0.4"
bindgen = "0.72.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
    "Win32_System_Threading",
]}
anyhow = "1.0"
hound = "3.5"
