[workspace]
resolver = "3"
members = [ "kinect-v2", 
    "kinect-v2-sys"
]

[workspace.package]
edition = "2024"
authors = ["Fu Wang <wangfu91@hotmail.com>"]
description = "A Rust binding for the Kinect V2 Windows SDK."
license = "MIT"
repository = "https://github.com/wangfu91/kinect-v2-rs"
keywords = ["kinect-v2", "sdk", "windows"]
categories = ["api-bindings", "os::windows-apis"]
readme = "README.md"

[workspace.dependencies]
log = "0.4"
bindgen = "0.72.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
    "Win32_System_Threading",
]}
anyhow = "1.0"
hound = "3.5"

[workspace.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc", "i686-pc-windows-msvc"]

