[package]
name = "kinect-v2-sys"
version = "0.1.0"
edition.workspace = true

[dependencies]
log = "0.4"
windows = { version = "0.61.3", features = [
    "Win32_Foundation", 
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
] }

[build-dependencies]
bindgen = "0.72.0"

[dev-dependencies]
anyhow = "1.0"
