[package]
name = "kinect-v2-sys"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
log.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
] }

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
anyhow.workspace = true

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
]
