[package]
name = "kinect-v2"
version = "0.1.0"
edition.workspace = true

[dependencies]
windows = { version = "0.61.2", features = [
    "Win32_Foundation", 
    "Win32_System_Threading",
]}
kinect-v2-sys = { path= "../kinect-v2-sys" }
log = "0.4"
env_logger = "0.11.8"

[dev-dependencies]
anyhow = "1.0"
hound = "3.5"