[package]
name = "kinect-v2"
version = "0.1.0"
edition.workspace = true

[dependencies]
log.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation", 
    "Win32_System_Threading",
]}
kinect-v2-sys = { path= "../kinect-v2-sys" }

[dev-dependencies]
anyhow.workspace = true
hound.workspace = true